--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,5 +45,17 @@
     <string name="begin_activity_scan">Begin Icon Request Activity</string>
     <string name="scan_note">By pressing this button this application will scan your phone for installed activities (apps) and compile a text file as well as the applications icons and create a zip file to send us, thus allowing us to fulfil your request</string>
     <string name="carddemo_title_list_cursor">carddemo_title_list_cursor</string>
+    <string-array name="PowerUsageOptionString">
+        <item >精準</item>
+        <item >平衡</item>
+        <item >省電</item>
+    </string-array>
+    <string-array name="PowerUsageOptionValue">
+        <item >1</item>
+        <item >0</item>
+        <item >-1</item>
+    </string-array>
+    <string name="PowerUsageOptionDefaultValue">0</string>
+    <string name="PowerUsageOptionTittle">位置偵測模式</string>
     
 </resources>
